--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A fullstack Todo application built with Node.js, MongoDB, and Express. Includes Docker support and a CI/CD pipeline using GitHub Actions to automate testing, Docker image building, and deployment.",
   "main": "index.js",
   "scripts": {
+    "start": "node server/start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
@@ -11,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
