--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A fullstack Todo application built with Node.js, MongoDB, and Express. Includes Docker support and a CI/CD pipeline using GitHub Actions to automate testing, Docker image building, and deployment.",
   "main": "index.js",
   "scripts": {
-    "start": "node server/start.js",
+    "start": "nodemon  server/start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
@@ -16,6 +16,7 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "eslint": "^9.29.0"
+    "eslint": "^9.29.0",
+    "nodemon": "^3.1.10"
   }
 }
